--- a/style.css
+++ b/style.css
@@ -1,25 +1,89 @@
-/* *{
+ *{
   margin: 0;
-  padding: 0;
+   padding: 0; 
   box-sizing: border-box;
-} */
+} 
 
 figure{
-  border: 1px solid black;
-  border-radius: 15px;
-  box-sizing: border-box;
-  width: 600px;
+  border: 1px solid #116ad2;
+  border-radius: 10px;
+  /* box-sizing: border-box; */
+  width: 380px;
+  height:400px ;
   align-items: center;
   text-align: center;
-  background-color: #bbeed5;
+  background-color: #DAE2EC;
+  font-size: smaller;
+  margin-left: 12px;
 }
 
-#featuredProducts figure {
- 
-  display: inline-block;
+
+img{
+  width: 330px;
+  height: 250px;
+  border-radius: 3px;
+  margin-top: 18px;
+  border-radius: 4px;
+  margin-left: 10px;
+
 }
 
-/* figure img{
-  display: block;
-  width: 100%;
-} */
+button{
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  background-color: #E49E15;
+  border: none;
+  color: whitesmoke;
+  margin-top: 8px;
+}
+h4{
+  font-weight: 300;
+}
+input[type=search]{
+  width:600px;
+  height: 30px;
+  border-radius: 15px;
+  border: 1px solid lightblue;
+  align-items: center;
+}
+
+body{
+  font-family: sans-serif;
+}
+.main{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom:30px ;
+  margin-left: 15px;
+  margin-top:12px;
+}
+.one{
+  color: #E49E15;
+}
+span .two{
+  color: #6397D3;
+}
+.cart{
+  padding: 5px;
+  font-size: 30px;
+  border-radius: 4px;
+  position: relative;
+}
+.cartAmount{
+  position: absolute;
+  top:0;
+  right:0;
+  font-size:16px;
+  background-color: red;
+  color: white;
+  border-radius: 3px;
+  align-content: center;
+}
+section{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap:10px;
+  justify-content: center;
+}
