--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ button{
   border: none;
   color: whitesmoke;
   margin-top: 8px;
+  cursor: pointer;
 }
 h4{
   font-weight: 300;
@@ -242,3 +243,48 @@ nav {
   color: whitesmoke; 
 }
 
+
+
+.sidebar {
+  height: 80%;
+  width: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: #DAE2EC;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  border: 1px solid #4578b0;
+}
+
+.sidebar a {
+  padding: 10px 15px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+  
+}
+
+.sidebar a:hover {
+  color: #4578b0; 
+}
+
+.sidebar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.cart {
+  cursor: pointer;
+}
+ .btnshop{
+background-color: red;
+
+cursor: pointer;
+}
